# docs/swagger.yaml
@@ -1,11 +1,11 @@
 basePath: /sentinel
 definitions:
-  handlers.RespondJson:
+  models.APIResponse:
     properties:
-      intent:
+      data: {}
+      path:
         type: string
-      message: {}
-      status:
+      success:
         type: boolean
     type: object
 info:
@@ -38,19 +38,19 @@ paths:
         "200":
           description: Certificate details retrieved successfully
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
         "400":
           description: Certificate check failed due to invalid request
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
         "422":
           description: Certificate check failed due to invalid request
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
         "500":
           description: Certificate check failed due to internal server error
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
       security:
       - BearerAuth: []
       summary: Check a given domain certificate
@@ -68,19 +68,19 @@ paths:
         "200":
           description: All certificates checked successfully
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
         "400":
           description: Certificate check failed due to invalid request body
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
         "422":
           description: Certificate check failed due to invalid request body
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
         "500":
           description: Certificate check failed due to internal server error
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
       security:
       - BearerAuth: []
       summary: Check all domain SSL/TLS certificates
@@ -98,19 +98,19 @@ paths:
         "200":
           description: List of domains successfully retrieved
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
         "400":
           description: List certificates failed due to invalid request
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
         "422":
           description: List certificates failed due to invalid request
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
         "500":
           description: List certificates failed due to internal server error
           schema:
-            $ref: '#/definitions/handlers.RespondJson'
+            $ref: '#/definitions/models.APIResponse'
       security:
       - BearerAuth: []
       summary: Display domain list
