# internal/models/response.go
@@ -1,0 +1,7 @@
+package models
+
+type APIResponse struct {
+	Success bool        `json:"success"`
+	Data    interface{} `json:"data,omitempty"`
+	Path    string      `json:"path,omitempty"`
+}
